--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "typescript": "~5.0.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-backup": "^1.204.0",
     "@aws-quickstart/eks-blueprints": "^1.9.1",
     "aws-cdk-lib": "2.83.1",
+    "cdk-backup-plan": "^0.0.7",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
