--- a/manifests/StorageClass/templates/StorageClass.yaml
+++ b/manifests/StorageClass/templates/StorageClass.yaml
@@ -1,3 +1,4 @@
+---
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
@@ -5,3 +6,10 @@ metadata:
 provisioner: ebs.csi.aws.com
 parameters:
   tagSpecification_1: "EKSPVBackup=true"
+
+---
+apiVersion: v1
+kind: StorageClass
+metadata:
+  name: efs-sc
+provisioner: efs.csi.aws.com
