--- a/manifests/StorageClass/templates/StorageClass.yaml
+++ b/manifests/StorageClass/templates/StorageClass.yaml
@@ -8,7 +8,7 @@ parameters:
   tagSpecification_1: "EKSPVBackup=true"
 
 ---
-apiVersion: v1
+apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: efs-sc
